enhance the design

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
-  <span>Fleet Management Dashboard</span>
+  <span>Vehicle Management Dashboard</span>
   <span class="spacer"></span>
   <button mat-raised-button color="accent" (click)="saveAssignments()">
     <mat-icon>save</mat-icon>
